# volcano-cli

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_cli.py  test_cli_fixes.py  test_cli_save.py  test_job.py  test_register_team.py  test_sdk_list.py  test_sdk_logs.py  test_sdk_parsers.py  test_sdk_save.py  test_sdk_ssh.py  test_sdk_usage.py  test_v0100_grant_admin.py  test_v0110_hidden_aliases.py  test_v0120_save_background_default.py  test_v0130_teams.py  test_v0140_images_curated.py  test_v040_regression.py  test_v050_regression.py  test_v060_ssh_wait.py  test_v070_expose_ssh_default.py  test_v090_cli_quota_queue.py  test_v090_sdk_quota_queue.py
volcano/: __init__.py  cli.py  job.py  kube.py  sdk.py
wuji/: __init__.py  cli.py  kube.py  sdk.py
